# img2map

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  mingw-w64-x86_64.cmake  release.sh  run.sh
example/: README.md  points.txt  test.html
src/: main.cpp
